--- a/public/index.html
+++ b/public/index.html
@@ -1,48 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Basic Meta Tags -->
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-
-    <!-- SEO Meta Tags -->
-    <meta name="description" content="Nexinfluence connects influencers with brands for exciting barter and paid collaborations. Get free products and earn by promoting!" />
-    <meta name="keywords" content="Nexinfluence, influencer marketing, brand collaborations, free products, paid reviews, product feedback, social media influencers" />
-    <meta name="author" content="Nexinfluence" />
-
-    <!-- Open Graph Protocol (for social sharing) -->
-    <meta property="og:title" content="Nexinfluence - Your Gateway to Free Products and Paid Reviews" />
-    <meta property="og:description" content="Join Nexinfluence and discover free products and paid collaborations by promoting brands on social media." />
-    <meta property="og:image" content="%PUBLIC_URL%/social-sharing-image.jpg" />
-    <meta property="og:url" content="https://www.nexinfluence.online" />
-    <meta property="og:type" content="website" />
-
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Nexinfluence - Your Gateway to Free Products and Paid Reviews" />
-    <meta name="twitter:description" content="Join Nexinfluence to access free products and earn with influencer marketing campaigns." />
-    <meta name="twitter:image" content="%PUBLIC_URL%/twitter-image.jpg" />
-
-    <!-- Google Site Verification -->
     <meta name="google-site-verification" content="6KdUKNuApP2qZ9D7IDpXGtzbltaKIlk13s1RoG7bShQ" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
 
-    <!-- Favicon -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
-
-    <!-- App Title -->
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
     <title>Nexinfluence - Your Gateway to Free Products and Paid Reviews</title>
   </head>
   <body>
-    <!-- No-JavaScript Warning -->
-    <noscript>
-      <div style="text-align: center; padding: 20px; background-color: #ffcccb; color: #333;">
-        <strong>JavaScript is required to run this application.</strong><br />
-        Please enable JavaScript in your browser settings or try accessing from another device.
-      </div>
-    </noscript>
-
-    <!-- React App Root -->
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
+
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
   </body>
 </html>
